# BatToExe

./: .gitignore  CMakeLists.txt  README.md
include/: bat_processor.h  compiler.h  file_util.h
src/: bat_processor.c  compiler.c  file_util.c  main.c
test_files/: script.bat
